# Virtual_Numbers

./: .gitignore  CMakeCache.txt  CMakeLists.txt  IMPLEMENTATION_README.md  PITCH.md  README.md  THEORY.md  build.sh  dir.txt  implementation_plan.md  pyproject.toml  technology_stack.md
.github/workflows/: ci.yml  release.yml
bindings/: CMakeLists.txt  example.py  nam_py.cpp  test_nam_py.py
bindings/python/: CMakeLists.txt  example.py  nam_py.cpp  test_nam_py.py
bindings/wasm/: CMakeLists.txt  calculator.html  calculator.js  example.js  nam.js  nam_wasm.cpp  test_nam_wasm.js
build-wasm/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  Makefile  build.ninja  cmake_install.cmake
build-wasm/bindings/wasm/: Makefile  calculator.html  cmake_install.cmake  example.js  nam.js  nam_wasm.js  nam_wasm.wasm  padic_fractal.html  test_nam_wasm.js
build-wasm/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake  nam_tests.js  nam_tests.wasm
docs/: README.md  abi_h.md  algebraic_hpp.md  big_int_hpp.md  bounded_int_hpp.md  codec_hpp.md  compare_hpp.md  constants_hpp.md  expr_hpp.md  generator_hpp.md  jit_hpp.md  memo_hpp.md  metric_hpp.md  number_hpp.md  padic_hpp.md  rational_hpp.md  refine_hpp.md  series_hpp.md  skip_hpp.md
include/nam/: abi.h  algebraic.hpp  arith.hpp  big_int.hpp  bounded_int.hpp  codec.hpp  compare.hpp  constants.hpp  expr.hpp  generator.hpp  jit.hpp  json.hpp  memo.hpp  metric.hpp  number.hpp  number_space.hpp  padic.hpp  rational.hpp  refine.hpp  serialize.hpp  series.hpp  skip.hpp
tests/: CMakeLists.txt  all_tests.cpp  test_main.hpp
