[build-system]
    requires = ["scikit-build-core>=0.8", "pybind11>=2.11"]
    build-backend = "scikit_build_core.build"

    [project]
    name = "numbers-as-machines"
    version = "0.1.0"
    description = "Numbers modeled as forkable digit-emitting machines (interval-honest)"
    readme = "README.md"
    requires-python = ">=3.8"
    license = { text = "MIT" }
    keywords = ["arbitrary-precision", "interval-arithmetic", "transcendental", "streaming"]
    classifiers = [
        "Programming Language :: C++",
        "Programming Language :: Python :: 3",
        "Topic :: Scientific/Engineering :: Mathematics",
    ]

    [project.urls]
    Homepage = "https://github.com/OWNER/numbers-as-machines"
    Repository = "https://github.com/OWNER/numbers-as-machines"

    [tool.scikit-build]
    # Build only the Python bindings target; the core is header-only.
    cmake.args = ["-DNAM_BUILD_PYTHON=ON"]
    cmake.build-type = "Release"
    # The pybind11 module is emitted under bindings/ as "nam".
    wheel.packages = []

    [tool.scikit-build.cmake.define]
    NAM_BUILD_PYTHON = "ON"
    # Sanitizers off for distributable wheels.
    NAM_SANITIZE = "OFF"

    [tool.cibuildwheel]
    build-frontend = "build"
    # Skip musllinux + PyPy to keep the matrix lean; adjust as desired.
    skip = ["pp*", "*-musllinux_*"]
    test-command = "python -c \"import nam; print(nam.__name__)\""

    [tool.cibuildwheel.linux]
    before-all = "yum install -y ninja-build || apt-get update && apt-get install -y ninja-build || true"